--- a/src/wpzoom-blocks/recipe-card/style.scss
+++ b/src/wpzoom-blocks/recipe-card/style.scss
@@ -36,6 +36,12 @@
 	.recipe-card-image figure img {
 		width: 100%;
 	}
+	.recipe-card-video video {
+        max-width: 100%;
+    }
+    .recipe-card-video [poster] {
+        object-fit: cover;
+    }
 	.recipe-card-details {
 		margin-bottom: 15px;
 		clear: both;
