--- a/src/wpzoom-blocks/recipe-card/skins/simple.scss
+++ b/src/wpzoom-blocks/recipe-card/skins/simple.scss
@@ -10,7 +10,7 @@ $heading_color: #222;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 
     &.is-style-simple {
-        padding: 10px 10px 20px;
+        padding: 20px;
         margin: 50px 0;
         background: #ffffff;
         border: 1px solid rgba(0,0,0,.1);
@@ -22,8 +22,8 @@ $heading_color: #222;
                 display: table;
             }
             
-            margin: -10px -10px 10px -10px;
-            padding: 10px;
+            margin: -20px -20px 10px -20px;
+            padding: 20px;
             background-color: #FBF9E7;
         }
 
@@ -92,7 +92,7 @@ $heading_color: #222;
         }
         .recipe-card-heading {
             margin-bottom: 5px;
-            margin-left: 15px;
+            margin-left: 20px;
             .recipe-card-title {
                 font-size: 24px;
                 margin: 0 0 10px;
@@ -138,7 +138,7 @@ $heading_color: #222;
 
         }
         .recipe-card-details {
-            margin-left: 15px;
+            margin-left: 20px;
             margin-bottom: 0;
             padding-top: 5px;
             border-top: 1px dashed rgba(0,0,0,.1);
@@ -147,6 +147,9 @@ $heading_color: #222;
 
             .detail-item {
                 color: #333;
+                display: inline-block;
+                vertical-align: middle;
+                margin-right: 15px;
 
                 .detail-item-label {
                     font-weight: bold;
