--- a/src/wpzoom-blocks/recipe-card/skins/simple.scss
+++ b/src/wpzoom-blocks/recipe-card/skins/simple.scss
@@ -249,7 +249,6 @@ $heading_color: #222;
                     display: table;
                 }
                 .ingredient-item-name {
-                    display: inline;
                     margin: 0;
                     vertical-align: middle;
 
@@ -260,11 +259,10 @@ $heading_color: #222;
                 }
                 .tick-circle {
                     content: '';
-                    display: inline-block;
-                    vertical-align: middle;
+                    float: left;
                     width: 18px;
                     height: 18px;
-                    margin: 3px 10px 0 0;
+                    margin: 6px 10px 0 0;
                     border-radius: 50%;
                     border: 2px solid $tick_color;
                     cursor: pointer;
