--- a/src/wpzoom-blocks/nutrition/editor.scss
+++ b/src/wpzoom-blocks/nutrition/editor.scss
@@ -46,4 +46,28 @@
             display: table;
         }
     }
+
+    &.layout-orientation-horizontal {
+        .wp-block-wpzoom-recipe-card-block-nutrition-information,
+        .wp-block-wpzoom-recipe-card-block-nutrition {
+            float: none;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        .wp-block-wpzoom-recipe-card-block-nutrition-information {
+            > .components-base-control {
+                float: left;
+                width: 25%;
+                padding-right: 20px;
+                box-sizing: border-box;
+                
+                &:nth-child(odd) {
+                    padding-right: inherit;
+                }
+                &:nth-child(4n+1) {
+                    padding-right: 0;
+                }
+            }
+        }
+    }
 }
