--- a/src/wpzoom-blocks/nutrition/style.scss
+++ b/src/wpzoom-blocks/nutrition/style.scss
@@ -3,110 +3,194 @@
  *
  * CSS for both Frontend+Backend.
  */
-.wp-block-wpzoom-recipe-card-block-nutrition {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-    line-height: 1.6;
-    font-size: .85rem;
-    border: 1px solid #aaa;
-    border-radius: 3px;
-    padding: 20px;
-    margin: 0 0 2rem;
-    color: #222;
+#wpzoom-recipe-nutrition {
+    .wp-block-wpzoom-recipe-card-block-nutrition {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+        line-height: 1.6;
+        font-size: .85rem;
+        border: 1px solid #aaa;
+        border-radius: 3px;
+        padding: 20px;
+        margin: 0 0 2rem;
+        color: #222;
 
-    h2 {
-        font-size: 2rem;
-        line-height: 1;
-        letter-spacing: 0;
-        font-weight: 800;
-        padding: 0 0 .4rem;
-        margin: 0;
-        border-bottom: 1px solid #aaa;
-        color: inherit;
-    }
-    p {
-        margin: 0;
-        padding: 0;
-        font-size: 1rem;
-        line-height: 1.4rem;
-    }
-    ul {
-        list-style: none !important;
-        margin: 0;
-        padding: 0;
-
-        li {
-            position: relative;
+        h2 {
+            font-size: 2rem;
+            line-height: 1;
+            letter-spacing: 0;
+            font-weight: 800;
+            padding: 0 0 .4rem;
             margin: 0;
-            padding: 3px 0;
-            border-top: 1px solid #aaa;
+            border-bottom: 1px solid #aaa;
+            color: inherit;
+        }
+        p {
+            margin: 0;
+            padding: 0;
+            font-size: 1rem;
+            line-height: 1.4rem;
+        }
+        ul {
+            list-style: none !important;
+            margin: 0;
+            padding: 0;
 
-            &.nutrition-facts-no-border,
-            &:empty,
-            &:first-child {
-                border: none;
+            li {
+                position: relative;
+                margin: 0;
+                padding: 3px 0;
+                border-top: 1px solid #aaa;
+
+                &.nutrition-facts-no-border,
+                &:empty,
+                &:first-child {
+                    border: none;
+                }
+
+                &::after {
+                    content: '';
+                    clear: both;
+                    display: table;
+                }
             }
 
+            ul {
+                padding-left: 20px;
+            }
+        }
+        strong {
+            font-weight: 700;
+
+            &.nutrition-facts-label {
+                font-weight: 400;
+            }
+        }
+        .nutrition-facts-heading {
+            font-size: .85rem;
+            font-weight: 800;
+        }
+        .nutrition-facts-right {
+            float: right;
+        }
+        .nutrition-facts-serving {
+            font-size: 1rem;
+        }
+        .nutrition-facts-serving-size {
+            font-size: 1.1rem;
+            font-weight: 800;
+
+            + .nutrition-facts-label {
+                font-size: 1.1rem;
+                font-weight: 800;
+            }
+        }
+        .nutrition-facts-hr {
+            border: none;
+            border-top: 1rem solid;
+            margin: .2rem 0 0;
+            padding: 0;
+        }
+        .nutrition-facts-spacer {
+            border: none;
+            height: .5rem;
+            padding: 0;
+            background: #222;
+        }
+        .nutrition-facts-amount-per-serving {
+            display: block;
+        }
+        .nutrition-facts-calories {
+            font-weight: 800;
+            font-size: 1.8rem;
+
+            + .nutrition-facts-label {
+                float: right;
+                font-size: 2.5rem;
+                line-height: 2rem;
+                font-weight: 800;
+            }
+        }
+        .nutrition-facts-daily-value-text {
+            line-height: 1.2rem;
+            font-size: .75rem;
+        }
+    }
+
+    &.layout-orientation-horizontal {
+        .wp-block-wpzoom-recipe-card-block-nutrition {
             &::after {
                 content: '';
                 clear: both;
                 display: table;
             }
-        }
 
-        ul {
-            padding-left: 20px;
-        }
-    }
-    strong {
-        font-weight: 700;
+            .horizontal-column-1,
+            .horizontal-column-2,
+            .horizontal-column-3 {
+                float: left;
+                width: 33.3333%;
+                padding-right: 10px;
+            }
+            .horizontal-column-3 {
+                padding-right: 0;
+            }
 
-        &.nutrition-facts-label {
-            font-weight: 400;
-        }
-    }
-    .nutrition-facts-heading {
-        font-size: .85rem;
-        font-weight: 800;
-    }
-    .nutrition-facts-right {
-        float: right;
-    }
-    .nutrition-facts-serving {
-        font-size: 1rem;
-    }
-    .nutrition-facts-serving-size {
-        font-size: 1.1rem;
-        font-weight: 800;
+            h2 {
+                font-size: 1.6rem;
+            }
 
-        + .nutrition-facts-label {
-            font-size: 1.1rem;
-            font-weight: 800;
-        }
-    }
-    .nutrition-facts-hr {
-        border: none;
-        border-top: 1rem solid;
-        margin: .2rem 0 0;
-        padding: 0;
-    }
-    .nutrition-facts-spacer {
-        border: none;
-        height: .5rem;
-        padding: 0;
-        background: #222;
-    }
-    .nutrition-facts-amount-per-serving {
-        display: block;
-    }
-    .nutrition-facts-calories {
-        font-weight: 800;
-        font-size: 1.8rem;
+            .horizontal-column-1 {
+                p {
+                    line-height: 1.8rem;
+                }
+                hr {
+                    border: none;
+                    border-top: 1px solid #aaa;
 
-        + .nutrition-facts-label {
-            float: right;
-            font-size: 2.5rem;
-            line-height: 2rem;
-            font-weight: 800;
+                    + p {
+                        line-height: 2rem;
+                    }
+                }
+            }
+
+            .nutrition-facts-no-border {
+                line-height: 1rem;
+                > strong {
+                    font-size: .75rem;
+                }
+            }
+            .nutrition-facts-amount-per-serving {
+                display: inline-block;
+            }
+            .nutrition-facts-bottom {
+                clear: both;
+                border-bottom: 1px solid #aaa;
+
+                li {
+                    border: none;
+                    display: inline-block;
+                    padding: 4px 0;
+
+                    .nutrition-facts-right {
+                        float: none;
+                    }
+
+                    > strong {
+                        display: inline-block;
+                        vertical-align: middle;
+                    }
+
+                    &::after {
+                        content: '\2022';
+                        display: inline-block;
+                        vertical-align: middle;
+                        margin: auto 10px;
+                    }
+                    &:last-child::after {
+                        display: none;
+                    }
+                }
+            }
         }
     }
 }
