Multiple fixes and improvements

--- a/src/wpzoom-blocks/nutrition/editor.scss
+++ b/src/wpzoom-blocks/nutrition/editor.scss
@@ -28,8 +28,8 @@
             box-sizing: border-box;
 
             .components-base-control__label {
-                font-size: .7rem;
-                letter-spacing: .03rem;
+                font-size: .7em;
+                letter-spacing: .03em;
                 font-weight: 700;
                 text-transform: uppercase;
                 line-height: 1;
@@ -60,7 +60,7 @@
                 width: 25%;
                 padding-right: 20px;
                 box-sizing: border-box;
-                
+
                 &:nth-child(odd) {
                     padding-right: inherit;
                 }
