Multiple fixes and improvements to Recipe details
Added defaults for custom details fields
Added Notice component to Panels in Block Settings
Removed structuredDataTestingTool and added other functions instead
Display custom details into Recipe Card
Fixed isssue with getPlaceholder if detail item has value
Only first Panel from Block Settings will be opened on initial instance

--- a/src/wpzoom-blocks/recipe-card/editor.scss
+++ b/src/wpzoom-blocks/recipe-card/editor.scss
@@ -216,12 +216,98 @@
 		margin-bottom: 1em;
 	}
 }
-.wpzoom-recipe-card-details .components-base-control.components-toggle-control {
-	margin-bottom: 10px;
+.wpzoom-recipe-card-details {
+	.components-panel__row {
+		display: block;
+		margin-top: 0;
+		margin-bottom: 15px;
+		padding-bottom: 15px;
+		border-bottom: 1px solid #e2e4e7;
+
+		&:last-child {
+			border: none;
+			margin: 0;
+			padding: 0;
+		}
+		
+		.components-base-control:nth-child(1) {
+			width: 100%;
+			clear: both;
+			margin-bottom: 10px !important;
+		}
+		.components-base-control:nth-child(2) {
+			padding-right: 5px;
+		}
+		.components-base-control:nth-child(3) {
+			padding-left: 5px;
+		}
+		.components-base-control:nth-child(2),
+		.components-base-control:nth-child(3) {
+			width: 50%;
+			display: inline-block;
+		}
+		.components-base-control {
+			margin-bottom: 0;
+			.components-base-control__field {
+				margin-bottom: 0;
+			}
+			.components-base-control__label {
+				max-width: 90%;
+				font-weight: 500;
+			}
+			&:last-child {
+				margin-bottom: 0 !important;
+			}
+		}
+	}
+	.components-base-control.components-toggle-control {
+		margin-bottom: 10px;
+	}
 }
-.wpzoom-recipe-card-details .components-panel__row {
-	margin-top: 0;
-	margin-bottom: 20px;
+.wpzoom-recipe-card-custom-details {
+	.components-panel__row {
+		display: block;
+		margin-top: 0;
+		margin-bottom: 15px;
+		padding-bottom: 15px;
+		border-bottom: 1px solid #e2e4e7;
+
+		&:last-child {
+			border: none;
+			margin: 0;
+			padding: 0;
+		}
+
+		.components-base-control:nth-child(1) {
+			width: 100%;
+			clear: both;
+			margin-bottom: 10px !important;
+		}
+		.components-base-control:nth-child(2) {
+			padding-right: 5px;
+		}
+		.components-base-control:nth-child(3) {
+			padding-left: 5px;
+		}
+		.components-base-control:nth-child(2),
+		.components-base-control:nth-child(3) {
+			width: 50%;
+			display: inline-block;
+		}
+		.components-base-control {
+			margin-bottom: 0;
+			.components-base-control__field {
+				margin-bottom: 0;
+			}
+			.components-base-control__label {
+				max-width: 90%;
+				font-weight: 500;
+			}
+			&:last-child {
+				margin-bottom: 0 !important;
+			}
+		}
+	}
 }
 .wpzoom-recipe-card-settings .components-base-control__help,
 .wpzoom-recipe-card-seo-settings .components-base-control__help,
