--- a/src/wpzoom-blocks/recipe-card/skins/newdesign.scss
+++ b/src/wpzoom-blocks/recipe-card/skins/newdesign.scss
@@ -136,7 +136,8 @@ $heading_color: #222;
         }
         .details-items {
             font-size: 0;
-            border: 1px dashed rgba(0,0,0,.1);
+            border-left: 1px dashed rgba(0,0,0,.1);
+            border-top: 1px dashed rgba(0,0,0,.1);
             text-align: center;
             display: flex;
             flex-wrap: wrap;
@@ -147,6 +148,7 @@ $heading_color: #222;
                 position: relative;
                 box-sizing: border-box;
                 border-right: 1px dashed rgba(0,0,0,.1);
+                border-bottom: 1px dashed rgba(0,0,0,.1);
                 // color: #333;
 
                 .detail-item-label {
@@ -190,25 +192,6 @@ $heading_color: #222;
                         margin: 0 auto !important;
                     }
                 }
-
-                &:last-child::after {
-                    display: none;
-                }
-
-                &:last-child {
-                    border-right: 0;
-                }
-            }
-
-            > div:nth-child(4) {
-                margin-right: 0;
-                padding-right: 0;
-            }
-
-            &::after {
-                content: '';
-                clear: both;
-                display: table;
             }
         }
         .recipe-card-summary {
