--- a/src/wpzoom-blocks/recipe-card/editor.scss
+++ b/src/wpzoom-blocks/recipe-card/editor.scss
@@ -96,9 +96,28 @@
 		position: relative;
 		list-style-type: none;
 
+		.components-base-control {
+			display: inline-block;
+			margin-right: 3%;
+			margin-bottom: 0;
+			width: 15%;
+		}
 		.editor-rich-text {
 			display: inline-block;
-			width: 93%;
+			width: 64%;
+			p {
+				padding: 3px 8px;
+				border-radius: 4px;
+				border: 1px solid #7e8993;
+				font-size: 14px;
+				background-color: #fff;
+				&:focus {
+					color: #191e23;
+					border-color: #007cba;
+					box-shadow: 0 0 0 1px #007cba;
+					outline: 2px solid transparent;
+				}
+			}
 		}
         .ingredient-item-group-title {
             font-weight: bold;
@@ -108,7 +127,6 @@
 	.ingredients-list {
 		> li {
 			.ingredient-item-name {
-				padding-left: 0 !important;
 				&:hover {
 				    text-decoration: none !important;
 				}
