--- a/src/wpzoom-blocks/recipe-card/editor.scss
+++ b/src/wpzoom-blocks/recipe-card/editor.scss
@@ -80,11 +80,17 @@
 					margin-top: 0;
 					text-align: left;
 				}
-				.detail-item-value[role="textbox"] {
-					margin: 0 5px 0 0;
-					padding: 2px 5px;
-					border: 1px solid #ccc;
-					border-radius: 3px;
+				.components-base-control {
+					display: inline-block;
+					margin-right: 5px;
+					.components-base-control__field {
+						margin-bottom: 0;
+						.components-text-control__input {
+							width: 50px;
+							font-size: 14px;
+							padding: 5px 0 5px 5px;
+						}
+					}
 				}
 			}
 		}
