--- a/src/wpzoom-blocks/recipe-card/editor.scss
+++ b/src/wpzoom-blocks/recipe-card/editor.scss
@@ -108,20 +108,22 @@
 			margin-bottom: 0;
 			width: 15%;
 		}
-		.editor-rich-text {
-			display: inline-block;
-			width: 64%;
-			p {
-				padding: 3px 8px;
-				border-radius: 4px;
-				border: 1px solid #7e8993;
-				font-size: 14px;
-				background-color: #fff;
-				&:focus {
-					color: #191e23;
-					border-color: #007cba;
-					box-shadow: 0 0 0 1px #007cba;
-					outline: 2px solid transparent;
+		&:not(.ingredient-item-group) {
+			.editor-rich-text {
+				display: inline-block;
+				width: 64%;
+				p {
+					padding: 3px 8px;
+					border-radius: 4px;
+					border: 1px solid #7e8993;
+					font-size: 14px;
+					background-color: #fff;
+					&:focus {
+						color: #191e23;
+						border-color: #007cba;
+						box-shadow: 0 0 0 1px #007cba;
+						outline: 2px solid transparent;
+					}
 				}
 			}
 		}
@@ -167,11 +169,6 @@
 			display: inline-flex;
 		}
 	}
-	.ingredient-item-mover {
-		position: absolute;
-		top: 0;
-		left: -29px;
-	}
 	.ingredient-buttons {
 		text-align: center;
 		button {
@@ -197,11 +194,6 @@
 		button {
 			display: inline-flex;
 		}
-	}
-	.direction-step-mover {
-		position: absolute;
-		top: 0;
-		left: -29px;
 	}
 	.direction-buttons {
 		text-align: center;
