Fixed ingredient name input color in editor for style Default

--- a/src/wpzoom-blocks/recipe-card/editor.scss
+++ b/src/wpzoom-blocks/recipe-card/editor.scss
@@ -118,6 +118,7 @@
 					border: 1px solid #7e8993;
 					font-size: 14px;
 					background-color: #fff;
+					color: initial;
 					&:focus {
 						color: #191e23;
 						border-color: #007cba;
