--- a/src/wpzoom-blocks/recipe-card/skins/simple.scss
+++ b/src/wpzoom-blocks/recipe-card/skins/simple.scss
@@ -155,7 +155,7 @@ $heading_color: #222;
                     font-weight: bold;
                     margin-right: 5px;
                 }
-                .detail-item-label, .detail-item-value, .detail-item-unit {
+                .detail-item-label {
                     font-size: 14px;
                 }
                 .detail-item-icon, .detail-item-label {
@@ -168,6 +168,7 @@ $heading_color: #222;
                 .detail-item-value, .detail-item-unit {
                     display: inline-block;
                     line-height: 1.4;
+                    font-size: 13px;
                 }
 
                 .detail-item-icon {
