Added custom svg icons for pinterest and print

--- a/src/wpzoom-blocks/recipe-card/skins/default.scss
+++ b/src/wpzoom-blocks/recipe-card/skins/default.scss
@@ -75,10 +75,11 @@ $heading_color: #222;
                     box-shadow: none;
                     .icon-print-link {
                         font-size: 18px;
-                        margin-right: 10px;
+                        margin-right: 5px;
                         vertical-align: middle;
                     }
                     .icon-print-link + span {
+                        vertical-align: middle;
                         font-size: 12px;
                         letter-spacing: 1.5px;
                     }
@@ -103,7 +104,7 @@ $heading_color: #222;
                     background-color: #C62122;
                     .icon-pinit-link {
                         font-size: 18px;
-                        margin-right: 10px;
+                        margin-right: 5px;
                         vertical-align: middle;
                     }
                     .icon-pinit-link + span {
