--- a/src/wpzoom-blocks/recipe-card/skins/simple.scss
+++ b/src/wpzoom-blocks/recipe-card/skins/simple.scss
@@ -72,6 +72,7 @@ $heading_color: #222;
                     }
                     .icon-print-link + span,
                     .icon-pinit-link + span {
+                        vertical-align: middle;
                         font-size: 14px;
                     }
                 }
