--- a/src/wpzoom-blocks/recipe-card/skins/simple.scss
+++ b/src/wpzoom-blocks/recipe-card/skins/simple.scss
@@ -91,6 +91,7 @@ $heading_color: #222;
             float: right;
             width: 60%;
         }
+
         .recipe-card-heading {
             margin-bottom: 5px;
             margin-left: 20px;
@@ -399,6 +400,21 @@ $heading_color: #222;
                         top: 25px;
                     }
                 }
+            }
+        }
+
+        &.recipe-card-noimage {
+            .recipe-card-image-preview,
+            .recipe-card-image {
+                display: none;
+            }
+            .recipe-card-along-image {
+                float: none;
+                width: 100%;
+            }
+            .recipe-card-heading,
+            .recipe-card-details {
+                margin-left: 0;
             }
         }
     }
