--- a/src/wpzoom-blocks/recipe-card/style.scss
+++ b/src/wpzoom-blocks/recipe-card/style.scss
@@ -34,11 +34,8 @@
 		.recipe-card-title + p {
 			margin-bottom: 0;
 		}
-		&::after {
-			content: '';
-			clear: both;
-			display: table;
-		}
+        
+		@include clear-after;
 	}
 	.recipe-card-image figure img {
 		width: 100%;
@@ -145,7 +142,7 @@
             }
 		}
 	}
-    .recipe-card-image .wpzoom-recipe-card-print-link .btn-print-link i,
+	.recipe-card-image .wpzoom-recipe-card-print-link .btn-print-link i,
 	.recipe-card-image .wpzoom-recipe-card-pinit .btn-pinit-link i {
         display: inline-block;
         text-indent: -9999px;
@@ -173,10 +170,10 @@
     	&::before {
 	        content: '';
 	        counter-increment: none;
-	    }
-	}
+        }
+    }
 
-    .direction-step img {
+	.direction-step img {
     	display: block;
     	clear: both;
     }
@@ -273,10 +270,9 @@
         letter-spacing: 1px;
         text-transform: uppercase;
         color: #ababab;
-        font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 
         a {
-            color: #222;
+            color: #222222;
             text-decoration: none;
             padding-bottom: 2px;
             border-bottom: 1px solid #eee;
