--- a/src/wpzoom-blocks/ingredients/editor.scss
+++ b/src/wpzoom-blocks/ingredients/editor.scss
@@ -26,7 +26,7 @@
 		}
 	}
 	.ingredients-list > li {
-		cursor: initial !important;
+		cursor: text !important;
 
 		.ingredient-item-name {
 			&:hover {
@@ -39,11 +39,6 @@
 		button {
 			display: inline-flex;
 		}
-	}
-	.ingredient-item-mover {
-		position: absolute;
-		top: 0;
-		left: -29px;
 	}
 	.ingredient-buttons {
 		text-align: center;
