Revert "Removed width: 45% for adjustable quantity input"
This reverts commit 5478b6f8420bd4d6fa395d2854226216c0c3a7f8.

--- a/src/wpzoom-blocks/recipe-card/style.scss
+++ b/src/wpzoom-blocks/recipe-card/style.scss
@@ -84,6 +84,7 @@
             .adjustable-quantity {
                 position: relative;
                 vertical-align: middle;
+                width: 45%;
 
                 + .detail-item-unit {
                     vertical-align: middle;
