--- a/src/wpzoom-blocks/recipe-card/style.scss
+++ b/src/wpzoom-blocks/recipe-card/style.scss
@@ -34,7 +34,7 @@
 		.recipe-card-title + p {
 			margin-bottom: 0;
 		}
-        
+
 		@include clear-after;
 	}
 	.recipe-card-image figure img {
@@ -86,6 +86,9 @@
                 vertical-align: middle;
 
                 + .detail-item-unit {
+                    vertical-align: middle;
+                }
+                + .only-print-visible + .detail-item-unit {
                     vertical-align: middle;
                 }
                 input[type=number]::-webkit-inner-spin-button,
