--- a/src/wpzoom-blocks/recipe-card/style.scss
+++ b/src/wpzoom-blocks/recipe-card/style.scss
@@ -292,7 +292,8 @@
     }
 
     .recipe-card-cta-instagram,
-    .recipe-card-cta-pinterest {
+    .recipe-card-cta-pinterest,
+    .recipe-card-cta-facebook {
         padding: 15px;
         position: relative;
         padding-left: 6.2em;
@@ -333,10 +334,13 @@
         }
     }
     .recipe-card-directions + .recipe-card-cta-instagram,
-    .recipe-card-directions + .recipe-card-cta-pinterest {
+    .recipe-card-directions + .recipe-card-cta-pinterest,
+    .recipe-card-directions + .recipe-card-cta-facebook {
         margin-top: 20px;
     }
-    .recipe-card-cta-instagram + .recipe-card-cta-pinterest {
+    .recipe-card-cta-instagram + .recipe-card-cta-pinterest,
+    .recipe-card-cta-instagram + .recipe-card-cta-facebook,
+    .recipe-card-cta-pinterest + .recipe-card-cta-facebook {
         margin-top: 20px;
     }
 }
