[WIP] Display Food Labels on Front-End

--- a/src/wpzoom-blocks/recipe-card/style.scss
+++ b/src/wpzoom-blocks/recipe-card/style.scss
@@ -352,10 +352,14 @@
             flex-wrap: wrap;
 
             > li {
-                flex: 0 0 16.6666%;
+                flex: 0 0 12.5%;
                 line-height: 0;
+                list-style-type: none;
             }
         }
+    }
+    .recipe-card-notes + .recipe-card-food-labels {
+        margin-top: -10px;
     }
 }
 
