--- a/src/wpzoom-blocks/recipe-card/style.scss
+++ b/src/wpzoom-blocks/recipe-card/style.scss
@@ -189,6 +189,98 @@
         	display: block;
         	clear: both;
         }
+
+        .direction-step-gallery {
+            margin: $grid-size 0;
+
+            .direction-step-gallery-grid {
+                display: flex;
+                flex-wrap: wrap;
+                @include reset-list;
+
+                .direction-step-gallery-item {
+                    // Add space between thumbnails, and unset right most thumbnails later.
+                    margin: 0 $grid-size $grid-size 0;
+                    display: flex;
+                    flex-grow: 1;
+                    flex-direction: column;
+                    justify-content: center;
+                    position: relative;
+
+                    &:last-child {
+                        margin-right: 0;
+                    }
+
+                    figure {
+                        margin: 0;
+                        height: 100%;
+
+                        // IE doesn't support flex so omit that.
+                        @supports (position: sticky) {
+                            display: flex;
+                            align-items: flex-end;
+                            justify-content: flex-start;
+                        }
+                    }
+
+                    img {
+                        display: block;
+                        max-width: 100%;
+                        height: auto;
+                        margin: 0;
+                    }
+
+                    // IE doesn't handle cropping, so we need an explicit width here.
+                    img {
+                        width: 100%;
+
+                        // IE11 doesn't read rules inside this query. They are applied only to modern browsers.
+                        @supports (position: sticky) {
+                            width: auto;
+                        }
+                    }
+                }
+            }
+
+            // On mobile and responsive viewports, we allow only 1 or 2 columns at the most.
+            .direction-step-gallery-item {
+                width: calc((100% - #{ $grid-size }) / 2);
+
+                &:nth-of-type(even) {
+                    margin-right: 0;
+                }
+            }
+
+            &.columns-1 .direction-step-gallery-item {
+                width: 100%;
+                margin-right: 0;
+            }
+
+            // Beyond mobile viewports, we allow up to 8 columns.
+            @include break-small {
+                @for $i from 3 through 8 {
+                    &.columns-#{ $i } .direction-step-gallery-item {
+                        width: calc((100% - #{ $grid-size-large } * #{ $i - 1 }) / #{ $i });
+                        margin-right: 16px;
+
+                        // Rules inside this query are only run by Microsoft Edge.
+                        // Edge miscalculates `calc`, so we have to add some buffer.
+                        // See also https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/15637241/
+                        @supports (-ms-ime-align:auto) {
+                            width: calc((100% - #{ $grid-size-large } * #{ $i - 1 }) / #{ $i } - 1px);
+                        }
+                    }
+                }
+
+                // Unset the right margin on every rightmost gallery item to ensure center balance.
+                @for $column-count from 1 through 8 {
+                    &.columns-#{ $column-count } .direction-step-gallery-item:nth-of-type(#{ $column-count }n) {
+                        margin-right: 0;
+                    }
+                }
+            }
+        }
+
     }
 
     .wpzoom-rating-stars-container {
