[WIP] Added margins to media placeholder when add gallery

--- a/src/wpzoom-blocks/recipe-card/editor.scss
+++ b/src/wpzoom-blocks/recipe-card/editor.scss
@@ -289,6 +289,10 @@
 			margin-top: -9px;
 			margin-left: -9px;
 		}
+
+		.direction-step-gallery-placeholder:not(.is-appender) {
+			margin: $grid-size-large 0;
+		}
 	}
 	.direction-step-button-container {
 		text-align: right;
