--- a/src/wpzoom-blocks/recipe-card/style.scss
+++ b/src/wpzoom-blocks/recipe-card/style.scss
@@ -198,72 +198,88 @@
 
         .direction-step-gallery {
             margin: $grid-size 0;
+            position: relative;
 
-            .direction-step-gallery-grid {
-                display: flex;
-                flex-wrap: wrap;
-                @include reset-list;
-
-                .direction-step-gallery-item {
-                    // Add space between thumbnails, and unset right most thumbnails later.
-                    margin: 0 $grid-size $grid-size 0;
+            // Only for front-end styles
+            &:not(.is-editor-gallery) {
+                .direction-step-gallery-grid {
                     display: flex;
-                    flex-grow: 1;
-                    flex-direction: column;
-                    justify-content: center;
-                    position: relative;
+                    flex-flow: column wrap;
+                    height: 300px;
+                    visibility: visible;
+                    width: 100%;
+                    @include reset-list;
 
-                    &:last-child {
-                        margin-right: 0;
+                    .direction-step-gallery-item {
+                        // Add space between thumbnails, and unset right most thumbnails later.
+                        margin: 0 $grid-size $grid-size 0;
+                        list-style-type: none;
+                        position: relative;
+                        box-sizing: border-box;
                     }
+                }
 
-                    figure {
-                        margin: 0;
-                        height: 100%;
-
-                        // IE doesn't support flex so omit that.
-                        @supports (position: sticky) {
-                            display: flex;
-                            align-items: flex-end;
-                            justify-content: flex-start;
-                        }
+                &.is-loading {
+                    .direction-step-gallery-grid {
+                        visibility: hidden;
+                        overflow: hidden;
                     }
-
-                    img {
-                        display: block;
-                        max-width: 100%;
-                        height: auto;
-                        margin: 0;
-                    }
-
-                    // IE doesn't handle cropping, so we need an explicit width here.
-                    img {
+                    .direction-step-gallery-preloader {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
                         width: 100%;
-
-                        // IE11 doesn't read rules inside this query. They are applied only to modern browsers.
-                        @supports (position: sticky) {
-                            width: auto;
-                        }
+                        height: 100%;
+                        background: #fff;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
                     }
                 }
             }
 
-            // On mobile and responsive viewports, we allow only 1 or 2 columns at the most.
             .direction-step-gallery-item {
-                width: calc((100% - #{ $grid-size }) / 2);
+                figure {
+                    margin: 0;
+                    height: 100%;
 
-                &:nth-of-type(even) {
+                    // IE doesn't support flex so omit that.
+                    @supports (position: sticky) {
+                        display: flex;
+                        align-items: flex-end;
+                        justify-content: flex-start;
+                    }
+                }
+
+                img {
+                    display: block;
+                    max-width: 100%;
+                    height: auto;
+                    margin: 0;
+                }
+
+                // IE doesn't handle cropping, so we need an explicit width here.
+                img {
+                    width: 100%;
+
+                    // IE11 doesn't read rules inside this query. They are applied only to modern browsers.
+                    @supports (position: sticky) {
+                        width: auto;
+                    }
+                }
+            }
+
+            &:not(.is-editor-gallery) {
+                // On mobile and responsive viewports, we allow only 1 or 2 columns at the most.
+                .direction-step-gallery-item {
+                    width: calc((100% - #{ $grid-size }) / 2);
+                }
+
+                &.columns-1 .direction-step-gallery-item {
+                    width: 100%;
                     margin-right: 0;
                 }
-            }
 
-            &.columns-1 .direction-step-gallery-item {
-                width: 100%;
-                margin-right: 0;
-            }
-
-            // Beyond mobile viewports, we allow up to 4 columns.
-            @include break-small {
                 @for $i from 2 through 4 {
                     &.columns-#{ $i } .direction-step-gallery-item {
                         width: calc((100% - #{ $grid-size } * #{ $i - 1 }) / #{ $i });
@@ -277,14 +293,8 @@
                         }
                     }
                 }
-
-                // Unset the right margin on every rightmost gallery item to ensure center balance.
-                @for $column-count from 2 through 4 {
-                    &.columns-#{ $column-count } .direction-step-gallery-item:nth-of-type(#{ $column-count }n) {
-                        margin-right: 0;
-                    }
-                }
             }
+
         }
 
     }
